<resources>
    <string name="app_name">Loppuprojekti</string>
    <string name="trainingButton">training</string>
    <string name="foodbutton">foodButton</string>
    <string name="homebutton">homeButton</string>
    <string name="sleepbutton">sleepButton</string>
    <string name="profilebutton">profileButton</string>
    <string name="urheilusovellus">Urheilusovellus</string>
    <string name="menu">menu</string>
    <string name="settings">Settings</string>
    <string name="new_training">Uusi harjoitus</string>
    <string name="drawerOpen">Open navigation drawer</string>
    <string name="drawerClose">Close navigation drawer</string>
    <string name="profiili">Profiili</string>
    <string name="uni">Unen määrä (h)</string>
    <string name="kalorit">Kalorit per päivä</string>
    <string name="pituus">Pituus (cm)</string>
    <string name="paino">Paino (kg)</string>
    <string name="age">Ikä</string>
    <string name="name">Nimi</string>
    <string name="tallenna">Tallenna tiedot</string>
    <string name="ravintosivu">Ravintosivu</string>
    <string name="kotisivu">Kotisivu</string>
    <string name="unisivu">Unisivu</string>
    <string name="profiilisivu">Profiilisivu</string>
    <string name="harjoitukset">Harjoitukset</string>
    <string name="unenmaarainput">Syöttämäsi unenmäärä oli...</string>
    <string name="kalorisuositus">Keskimäärin naiset tarvitsevat noin 2000 kaloria päivässä ja miehet noin 2500 kaloria.</string>
    <string name="kaloritarpeenlaskeminen">Karkean arvon omasta kaloritarpeesta saa kertomalla oman painon kolmellakymmenellä.
        Esimerkiksi, jos painat 80 kg, kaloritarpeesi on noin 80 * 30 = 2400 kaloria. Kaloritarpeeseen vaikuttaa myös ikä, pituus ja sukupuoli</string>
    <string name="arvoisa">Arvoisa käyttäjä</string>
</resources>