<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/addnew"
            android:icon="@drawable/plus"
            android:title="@string/new_training" />
        <item
            android:id="@+id/trainingshortcut"
            android:title="@string/harjoitukset"
            android:icon="@drawable/training"/>
        <item
            android:id="@+id/ravintoshortcut"
            android:title="@string/ravintosivu"
            android:icon="@drawable/eating"/>
        <item
            android:id="@+id/homeshortcut"
            android:title="@string/kotisivu"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/unisivushortcut"
            android:title="@string/unisivu"
            android:icon="@drawable/bed"/>
        <item
            android:id="@+id/profiilishortcut"
            android:title="@string/profiilisivu"
            android:icon="@drawable/profile"/>

    </group>

</menu>