<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urheilusovellus"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/menu" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.20" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.40" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.60" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.80" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/profiiliButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/profilebutton"
                android:onClick="profileButtonPressed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbarBottom"
                app:layout_constraintStart_toStartOf="@+id/guideline80"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile" />

            <ImageView
                android:id="@+id/sleepButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/sleepbutton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline80"
                app:layout_constraintStart_toStartOf="@+id/guideline60"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bed" />

            <ImageView
                android:id="@+id/homeButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/homebutton"
                android:onClick="homeButtonPressed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline60"
                app:layout_constraintStart_toStartOf="@+id/guideline40"
                app:layout_constraintTop_toTopOf="@+id/toolbarBottom"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/trainingButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/trainingButton"
                android:onClick="openTraining"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/training" />

            <ImageView
                android:id="@+id/foodButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/foodbutton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintStart_toStartOf="@+id/guideline20"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/eating" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>