<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:cotext=".MainActivity"
    android:fitsSystemWindows="true"
    android:background="@drawable/nightsleepwp">


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/menuView"
        app:menu="@menu/menu"
        android:layout_gravity="start"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/teal_700"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navigationIcon="@drawable/toolbarmenu"
                    app:title="" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/urheilusovellus"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.20" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.40" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.60" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.80" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarBottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/teal_700"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/profiiliButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/profilebutton"
                    android:onClick="profileButtonPressed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/toolbarBottom"
                    app:layout_constraintStart_toStartOf="@+id/guideline80"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/profile" />

                <ImageView
                    android:id="@+id/sleepButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/sleepbutton"
                    android:onClick="uniButtonPressed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline80"
                    app:layout_constraintStart_toStartOf="@+id/guideline60"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/bed" />

                <ImageView
                    android:id="@+id/homeButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/homebutton"
                    android:onClick="homeButtonPressed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline60"
                    app:layout_constraintStart_toStartOf="@+id/guideline40"
                    app:layout_constraintTop_toTopOf="@+id/toolbarBottom"
                    app:srcCompat="@drawable/home" />

                <ImageView
                    android:id="@+id/trainingButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/trainingButton"
                    android:onClick="openTraining"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/training" />

                <ImageView
                    android:id="@+id/foodButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/foodbutton"
                    android:onClick="ravintoButtonPressed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline40"
                    app:layout_constraintStart_toStartOf="@+id/guideline20"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/eating" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textViewViesti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hei, Arvoisa käyttäjä"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/appBarLayoutBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appBarLayoutTop"
            app:layout_constraintVertical_bias="0.197" />

        <TextView
            android:id="@+id/uniTunnit"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:text="- Hyvä ja suositeltu unenmäärä olisi noin 6-9 tuntia."
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appBarLayoutTop"
            app:layout_constraintVertical_bias="0.275" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:text="- Liian vähäinen unenmäärä huonontaa päiväsi suorituskykyä."
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tietoa unesta:"
            android:textColor="@color/white"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>